# Aegis-BPF

./: .gitignore  ADOPTERS.md  CMakeLists.txt  CODE_OF_CONDUCT.md  Dockerfile  MAINTAINERS.md  README.md  SECURITY.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: arm64-production.yml  benchmark.yml  bootstrap-repo-controls.yml  bpf-compiler-matrix.yml  bpf-coverage.yml  branch-protection-audit.yml  canary.yml  check-vendored.yml  ci.yml  comparison.yml  coverage-ratchet.yml  e2e.yml  failure-drill.yml  go-live-gate.yml  helm.yml  incident-drill.yml  kernel-bpf-test.yml  kernel-matrix.yml  key-rotation-drill.yml  label-sync.yml  multi-arch.yml  nightly-fuzz.yml  operator.yml  perf.yml  release-drill.yml  release-readiness.yml  release.yml  reproducibility.yml  scorecard.yml  security.yml  soak.yml  veristat.yml
benchmarks/: README.md  compare.sh  run-benchmarks.sh
bpf/: aegis.bpf.c  aegis_common.h  aegis_exec.bpf.h  aegis_file.bpf.h  aegis_ima.bpf.h  aegis_kernel.bpf.h  aegis_net.bpf.h  aegis_overlay.bpf.h  aegis_process.bpf.h
config/: event-schema.json  required_checks.txt  required_checks_release.txt  veristat_baseline.json
config/schemas/: capabilities_v1.json
dev/bench/: data.js
docs/: API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_SUPPORT.md  BPF_MAP_SCHEMA.md  BYPASS_CATALOG.md  CAPABILITY_POSTURE_CONTRACT.md  CHANGELOG.md  CNCF_SANDBOX_APPLICATION.md  COMPARISON_AND_SOAK_PLAN.md  COMPETITIVE_BENCH_METHODOLOGY.md  DEVELOPER_GUIDE.md  ENFORCEMENT_SEMANTICS_WHITEPAPER.md  FUZZING.md  GOLD_STANDARD_IMPLEMENTATION_PLAN.md  GUARANTEES.md  HARDENING.md  NETWORK_LAYER_DESIGN.md  PERFORMANCE.md  PERFORMANCE_COMPARISON.md  POLICY_SEMANTICS.md  POSITIONING.md  PRODUCTION_DEPLOYMENT_BLUEPRINT.md  QUICK_WINS_30_DAYS.md  ROADMAP_TO_EXCELLENCE.md  SOAK_24H.md  THREAT_MODEL.md  TROUBLESHOOTING.md
docs/compliance/: CIS_KUBERNETES_BENCHMARK.md  ISO_27001_CONTROLS.md  NIST_800_190_MAPPING.md  NIST_800_53_MAPPING.md  OPENSSF_BEST_PRACTICES.md  PCI_DSS_4_MAPPING.md  SLSA_PROVENANCE.md  SOC2_EVIDENCE_KIT.md
docs/man/: aegisbpf.1.md
docs/rules/: MITRE_ATTACK_TAG_SCHEMA.md
docs/runbooks/: INCIDENT_agent_crash.md
evidence/comparison/: comparison-2026-04-15.md  connect-close-2026-04-15.md  exec-loop-2026-04-15.md
evidence/soak-24h/: cpu.txt  kernel.txt  lsm.txt  memory.txt  soak_summary.json
examples/: prometheus-alerts.yml
examples/gitops/: argocd-application.yaml  fluxcd-kustomization.yaml
examples/policies/: cis-kubernetes-benchmark.conf  compliance-pci-dss.conf  container-hardening.conf  cryptocurrency-mining-detection.conf  minimal-getting-started.conf
grafana/dashboards/: executive-overview.json  performance-slis.json  policy-health.json  threat-hunting.json
integrations/opentelemetry/: docker-compose.yml  otel-collector-config.yaml  otlp-trace-exporter.py  prometheus.yml  requirements.txt
integrations/siem/: elastic-ecs-formatter.py  splunk-hec-forwarder.py
operator/: Dockerfile  Makefile  go.mod
operator/api/v1alpha1/: groupversion_info.go  types.go  zz_generated.deepcopy.go
operator/cmd/console-preview/: main.go
operator/cmd/operator/: main.go
operator/config/crd/: aegisbpf.io_aegisclusterpolicies.yaml  aegisbpf.io_aegispolicies.yaml
operator/config/manager/: deployment.yaml
operator/config/rbac/: role.yaml  role_binding.yaml  service_account.yaml
operator/config/webhook/: validating-webhook-configuration.yaml
operator/controllers/: aegisclusterpolicy_controller.go  aegispolicy_controller.go  conditions.go  conditions_test.go  merged_policy_controller.go
operator/examples/: allow-override.yaml  block-sensitive-files.yaml  crypto-miner-detection.yaml  global-kernel-protection.yaml  network-isolation.yaml
operator/internal/console/: broker.go  console_test.go  data.go  embed.go  handlers.go  server.go
operator/internal/console/templates/: dashboard.html  layout.html  nodes.html  policies.html  policy_detail.html
operator/internal/identity/: resolver.go
operator/internal/policy/: translator.go  translator_test.go
operator/internal/selector/: selector.go  selector_test.go
operator/internal/webhook/: validate.go  validate_test.go
research/: blog-series-outlines.md  conference-proposals.md  paper-outline.md
scripts/: aws_soak_24h.sh  btfgen.sh  check_manpage_contract.sh  compare_runtime_security.sh  install_peer_tools.sh  perf_exec_bench.sh  run_parser_fuzz_changed.sh  soak_reliability.sh  validate_bpf_map_schema.py  validate_capability_posture_contract.py  validate_mitre_tags.sh  validate_required_checks.py  veristat_check.sh
src/: binary_hash.cpp  binary_hash.hpp  bpf_attach.cpp  bpf_attach.hpp  bpf_config.cpp  bpf_config.hpp  bpf_integrity.cpp  bpf_integrity.hpp  bpf_maps.cpp  bpf_maps.hpp  bpf_ops.cpp  bpf_ops.hpp  bpf_signing.cpp  bpf_signing.hpp  cli_cgroup.cpp  cli_cgroup.hpp  cli_common.cpp  cli_common.hpp  cli_dispatch.cpp  cli_run.cpp  commands.hpp  commands_cgroup.cpp  commands_cgroup.hpp  commands_emergency.cpp  commands_emergency.hpp  commands_explain.cpp  commands_explain.hpp  commands_health.cpp  commands_health.hpp  commands_metrics.cpp  commands_metrics.hpp  commands_monitoring.cpp  commands_monitoring.hpp  commands_network.cpp  commands_policy.cpp  commands_probe.cpp  commands_probe.hpp  control.cpp  daemon.cpp  daemon.hpp  (+38 more)
tests/: check_feature_surface_contract.py  test_commands.cpp  test_json_scan.cpp  test_landlock_sandbox.cpp  test_metrics.cpp  test_policy.cpp  test_rule_engine.cpp  test_tracing.cpp
tests/bpf/: test_bpf_prog_run.cpp
tests/event_samples/: net_accept_block.json  net_accept_ip_block.json  net_connect_ip_port.json  net_listen_block.json  net_sendmsg_block.json
tests/fuzz/: fuzz_event_handling.cpp
tests/fuzz/corpus/: README.md
tests/fuzz/corpus/fuzz_bundle/: header-only  minimal-valid-shape  no-separator  with-signature  wrong-header
tests/fuzz/corpus/fuzz_network/: cidr-v4-host  port-any-both  port-udp-bind  (+1 more)
tests/json_samples/capabilities_v1/: ok.json
tutorials/: 01-block-first-file.md  02-network-policy.md  03-custom-policies.md  04-debugging-denials.md
(+15 files in other folders)
